[tool.poetry]
name = "notas-musicais-rudhy"
version = "0.1.0"
description = ""
authors = ["RudhyDev <rudhy.pereira@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais_rudhy"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
